# Universal-Pumpkin

./: CONTRIBUTING.md  LICENSE.md  README.md
client/: Universal Pumpkin.sln  build_1507_debug.ps1  build_1507_release.ps1  build_1709_debug.ps1  build_1709_release.ps1
client/Universal Pumpkin/: App.xaml  App.xaml.cs  ConsolePage.xaml  ConsolePage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  OobePage.xaml  Package.appxmanifest  PlayersPage.xaml  PumpkinController.cs  SettingsPage.xaml  SettingsPage.xaml.cs  Universal Pumpkin.csproj
client/Universal Pumpkin (1507)/: App.xaml  App.xaml.cs  ConsolePage.xaml  ConsolePage.xaml.cs  IpAddressHelper.cs  LoadPackagedLibrary.cs  MainPage.xaml  OobePage.xaml  Package.appxmanifest  PlayersPage.xaml  SettingsPage.xaml  SettingsPage.xaml.cs  Universal Pumpkin (1507).csproj
client/Universal Pumpkin (1507)/Properties/: AssemblyInfo.cs
client/Universal Pumpkin (1507)/Themes/: Win10_1507.xaml
client/Universal Pumpkin/Properties/: AssemblyInfo.cs
client/Universal_Pumpkin.Shared/: ConfigHelper.cs  ConsolePage.xaml.cs  Converters.cs  DataModels.cs  IpAddressHelper.cs  LoadPackagedLibrary.cs  MainPage.xaml.cs  ManagementModels.cs  MojangApiHelper.cs  PlayersPage.xaml.cs  PumpkinController.cs  SettingsPage.xaml.cs  Universal_Pumpkin.Shared.projitems  Universal_Pumpkin.Shared.shproj
pumpkin/src/: lib.rs
server/: .gitignore  Cargo.toml  build_arm32.ps1  build_arm64.ps1  build_x64.ps1  build_x86.ps1
server/pumpkin/: Cargo.toml
server/pumpkin-util/: Cargo.toml
server/pumpkin-uwp/: Cargo.toml
server/pumpkin-uwp/src/: lib.rs
(+81 files in other folders)
