[package]
name = "pumpkin-uwp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../pumpkin", default-features = false }
pumpkin-config = { path = "../pumpkin-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
log = "0.4"