[package]
name = "pumpkin-uwp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../pumpkin", default-features = false }
pumpkin-config.workspace = true
pumpkin-protocol.workspace = true
pumpkin-util.workspace = true
pumpkin-data.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
rustls.workspace = true
rustls-rustcrypto.workspace = true